translate codepen react nav into vue; make modification to  designadopt to my purposes; - items on nav BROWSE | MY BOOKS | WONK OUT

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,5 @@
-$primary: #EE82EE;
+
+$nav-background: rgba(255, 255, 255, 0.35);
+$shadow: 0 0 10px 1px rgba(0,0,0,0.2);
+$text-color: #555555;
+$transition-time: 0.15s;
