refactor code, factor out nav css into scss

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,12 @@
+// === NAVBAR ===
 
 $nav-background: rgba(255, 255, 255, 0.35);
 $shadow: 0 0 10px 1px rgba(0,0,0,0.2);
 $text-color: #555555;
 $transition-time: 0.15s;
+
+// === FONTS ===
+
+$navbar-font: 'Quicksand', Arial, sans-serif;
+
+// === SIZES ===
