- fade in animation applied to backside text, along with a black and white filter and shade cast. Some SCSS modifications

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -49,3 +49,15 @@
     @content;
   }
 }
+
+@mixin large-screen(){
+  @media only screen and (max-width: 1023px) and (min-width: 600px) {
+    @content;  
+  }
+}
+
+@mixin extra-large-screen(){
+  @media only screen and (min-width: 1024px){
+    @content;
+  }
+}
