--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,9 @@ $transition-time: 0.15s;
 
 // === FONTS ===
 
-$navbar-font: 'Quicksand', Arial, sans-serif;
+$navbar-font: 'Neucha', cursive;
+$search-bar-font: 'Quicksand', Arial, sans-serif;
 
 // === SIZES ===
+
+$page-width: 1200px;
