--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,8 +7,9 @@ $transition-time: 0.15s;
 
 // === FONTS ===
 
-$navbar-font: 'Neucha', cursive;
+$navbar-font: 'Neucha';
 $search-bar-font: 'Quicksand', Arial, sans-serif;
+$heading-font: 'Shadows Into Light';
 
 // === SIZES ===
 
