--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -9,6 +9,7 @@
 //pass in the font to the mixin that imports fonts
 @include google-font("Neucha");
 @include google-font("Quicksand");
+@include google-font("Shadows+Into+Light")
 
 @mixin large-text {
   font: {
@@ -18,7 +19,15 @@
     family: $navbar-font;
   }
 }
-
+@mixin heading-font {
+  font: {
+    size: 4rem;
+    weight: 400;
+    weight: bold;
+    family: $heading-font;
+  };
+  letter-spacing: 0.2em;
+}
 @mixin search-bar-text {
   text-transform: none;
   letter-spacing: 0.3rem;
@@ -60,7 +69,7 @@
 // mobile first query
 
 @mixin large-to-mid-screens(){
-  @media only screen and (min-width: 600px){
+  @media only screen and (min-width: 768px){
     @content;
   }
 }
